# thai-llm-tutorials

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.smoke/nb03/: samples.json
data/: README.md
data/kobeval_th/: checksums.json  th_instr.jsonl  th_know.jsonl  th_math.jsonl  th_safe.jsonl
kobeval/: __init__.py  data.py  domain_eval.py  metrics.py  plotting.py  runner.py  stats.py
notebooks/: 01_continue_pretraining.ipynb  01_continue_pretraining_output.ipynb  02_sft_lora.ipynb  02_sft_lora_output.ipynb  03_rlhf_ppo.ipynb  04_dpo.ipynb  05_grpo.ipynb  06_context_distillation.ipynb  07_model_distillation.ipynb  08_guardrails.ipynb  09_benchmarking.ipynb  10_deployment.ipynb  _template.ipynb  cell0_setup.ipy
scripts/: check_cell0.py  make_checksums.py  make_notebook.py  verify_math.py
tests/: test_base_model_prompting.py  test_data.py  test_domain_eval.py  test_metrics.py  test_notebooks.py  test_plotting_fonts.py  test_stats.py
tools/: colab_chunk.py  colab_detach.py  colab_poll.py  colab_run.sh  smoke_run.py
